<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.main.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <include
            android:id="@+id/cv_code_view"
            layout="@layout/card_view_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/cv_sp_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <include
            android:id="@+id/cv_sp_result"
            layout="@layout/card_view_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_code_view"
            app:layout_constraintVertical_chainStyle="spread" />

        <LinearLayout
            android:id="@+id/linear_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_sp_result"
            app:layout_constraintVertical_chainStyle="spread">

            <EditText
                android:id="@+id/et_card_view_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:ems="16"
                android:hint="@string/default_answer_hint"
                android:inputType="textPersonName"
                android:maxLength="200"
                android:textColorHint="@color/edit_text_hint_color"
                android:textSize="20sp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_answer"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="center"
                app:backgroundTint="@color/btn_answer_default"
                app:borderWidth="0dp"
                app:elevation="4dp"
                app:srcCompat="@drawable/ic_done_white_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_main_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/expansion_panel_outer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_answer">

            <Button
                android:id="@+id/btn_random"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/btn_answer_default"
                android:text="@string/another_question"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_give_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/btn_answer_default"
                android:text="@string/give_up_default"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/btn_answer_default"
                android:text="@string/hint"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <include
            android:id="@+id/expansion_panel_outer"
            layout="@layout/expansion_panel_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_main_buttons"
            app:layout_constraintVertical_chainStyle="spread" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>